// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/admin_console/license_settings/LicenseSettings load screen after upgrading 1`] = `
<div
  className="wrapper--fixed"
>
  <FormattedAdminHeader
    defaultMessage="Edition and License"
    id="admin.license.title"
    values={Object {}}
  />
  <div
    className="admin-console__wrapper"
  >
    <div
      className="admin-console__content"
    >
      <form
        className="form-horizontal"
        role="form"
      >
        <RenewLicenseCard
          isDisabled={false}
          isLicenseExpired={false}
          license={
            Object {
              "Company": "MatterFOSS",
              "ExpiresAt": "1620335443650",
              "IsLicensed": "true",
              "IssuedAt": "1517714643650",
              "Name": "LicenseName",
              "SkuShortName": "SkuName",
              "StartsAt": "1517714643650",
              "Users": "100",
            }
          }
          totalUsers={10}
        />
        <div
          className="form-group"
        >
          <label
            className="control-label col-sm-4"
          >
            <FormattedMessage
              defaultMessage="Edition: "
              id="admin.license.edition"
            />
          </label>
          <div
            className="col-sm-8"
          >
            <div>
              <p>
                MatterFOSS.
              </p>
            </div>
          </div>
        </div>
        <div
          className="form-group"
        >
          <label
            className="control-label col-sm-4"
          >
            <FormattedMessage
              defaultMessage="License: "
              id="admin.license.type"
            />
          </label>
          <div
            className="col-sm-8"
          >
            <div>
              <p>
                This software is offered under the GNU Affero GPL 3.0. You are reminded that under the terms of the AGPL, providing a this web service constitutes redistribution of the software and therefore any changes that you make to the software must be made available to your users in source code form.
              </p>
              <p />
              <p>
                See NOTICE.txt for information about open source software used in the system.
              </p>
            </div>
          </div>
        </div>
        <div
          className="form-group"
        />
      </form>
    </div>
  </div>
</div>
`;

exports[`components/admin_console/license_settings/LicenseSettings load screen while upgrading 1`] = `
<div
  className="wrapper--fixed"
>
  <FormattedAdminHeader
    defaultMessage="Edition and License"
    id="admin.license.title"
    values={Object {}}
  />
  <div
    className="admin-console__wrapper"
  >
    <div
      className="admin-console__content"
    >
      <form
        className="form-horizontal"
        role="form"
      >
        <RenewLicenseCard
          isDisabled={false}
          isLicenseExpired={false}
          license={
            Object {
              "Company": "MatterFOSS",
              "ExpiresAt": "1620335443650",
              "IsLicensed": "true",
              "IssuedAt": "1517714643650",
              "Name": "LicenseName",
              "SkuShortName": "SkuName",
              "StartsAt": "1517714643650",
              "Users": "100",
            }
          }
          totalUsers={10}
        />
        <div
          className="form-group"
        >
          <label
            className="control-label col-sm-4"
          >
            <FormattedMessage
              defaultMessage="Edition: "
              id="admin.license.edition"
            />
          </label>
          <div
            className="col-sm-8"
          >
            <div>
              <p>
                MatterFOSS.
              </p>
            </div>
          </div>
        </div>
        <div
          className="form-group"
        >
          <label
            className="control-label col-sm-4"
          >
            <FormattedMessage
              defaultMessage="License: "
              id="admin.license.type"
            />
          </label>
          <div
            className="col-sm-8"
          >
            <div>
              <p>
                This software is offered under the GNU Affero GPL 3.0. You are reminded that under the terms of the AGPL, providing a this web service constitutes redistribution of the software and therefore any changes that you make to the software must be made available to your users in source code form.
              </p>
              <p />
              <p>
                See NOTICE.txt for information about open source software used in the system.
              </p>
            </div>
          </div>
        </div>
        <div
          className="form-group"
        />
      </form>
    </div>
  </div>
</div>
`;

exports[`components/admin_console/license_settings/LicenseSettings should match snapshot enterprise build with license 1`] = `
<div
  className="wrapper--fixed"
>
  <FormattedAdminHeader
    defaultMessage="Edition and License"
    id="admin.license.title"
    values={Object {}}
  />
  <div
    className="admin-console__wrapper"
  >
    <div
      className="admin-console__content"
    >
      <form
        className="form-horizontal"
        role="form"
      >
        <RenewLicenseCard
          isDisabled={false}
          isLicenseExpired={false}
          license={
            Object {
              "Company": "MatterFOSS",
              "ExpiresAt": "1620335443650",
              "IsLicensed": "true",
              "IssuedAt": "1517714643650",
              "Name": "LicenseName",
              "SkuShortName": "SkuName",
              "StartsAt": "1517714643650",
              "Users": "100",
            }
          }
          totalUsers={10}
        />
        <div
          className="form-group"
        >
          <label
            className="control-label col-sm-4"
          >
            <FormattedMessage
              defaultMessage="Edition: "
              id="admin.license.edition"
            />
          </label>
          <div
            className="col-sm-8"
          >
            MatterFOSS - Licensed under the AGPL
          </div>
        </div>
        <div
          className="form-group"
        >
          <label
            className="control-label col-sm-4"
          >
            <FormattedMessage
              defaultMessage="License: "
              id="admin.license.type"
            />
          </label>
          <div
            className="col-sm-8"
          >
            <div>
              <p>
                This software is offered under the GNU Affero GPL 3.0. You are reminded that under the terms of the AGPL, providing a this web service constitutes redistribution of the software and therefore any changes that you make to the software must be made available to your users in source code form.
              </p>
              <br />
              See also: 
              <a
                href="https://www.gnu.org/licenses/agpl-3.0.en.html"
                rel="noopener noreferrer"
                target="_blank"
              >
                AGPL License text
              </a>
            </div>
          </div>
        </div>
        <div
          className="form-group"
        />
      </form>
    </div>
  </div>
</div>
`;

exports[`components/admin_console/license_settings/LicenseSettings should match snapshot enterprise build with license and isDisabled set to true 1`] = `
<div
  className="wrapper--fixed"
>
  <FormattedAdminHeader
    defaultMessage="Edition and License"
    id="admin.license.title"
    values={Object {}}
  />
  <div
    className="admin-console__wrapper"
  >
    <div
      className="admin-console__content"
    >
      <form
        className="form-horizontal"
        role="form"
      >
        <RenewLicenseCard
          isDisabled={true}
          isLicenseExpired={false}
          license={
            Object {
              "Company": "MatterFOSS",
              "ExpiresAt": "1620335443650",
              "IsLicensed": "true",
              "IssuedAt": "1517714643650",
              "Name": "LicenseName",
              "SkuShortName": "SkuName",
              "StartsAt": "1517714643650",
              "Users": "100",
            }
          }
          totalUsers={10}
        />
        <div
          className="form-group"
        >
          <label
            className="control-label col-sm-4"
          >
            <FormattedMessage
              defaultMessage="Edition: "
              id="admin.license.edition"
            />
          </label>
          <div
            className="col-sm-8"
          >
            MatterFOSS - Licensed under the AGPL
          </div>
        </div>
        <div
          className="form-group"
        >
          <label
            className="control-label col-sm-4"
          >
            <FormattedMessage
              defaultMessage="License: "
              id="admin.license.type"
            />
          </label>
          <div
            className="col-sm-8"
          >
            <div>
              <p>
                This software is offered under the GNU Affero GPL 3.0. You are reminded that under the terms of the AGPL, providing a this web service constitutes redistribution of the software and therefore any changes that you make to the software must be made available to your users in source code form.
              </p>
              <br />
              See also: 
              <a
                href="https://www.gnu.org/licenses/agpl-3.0.en.html"
                rel="noopener noreferrer"
                target="_blank"
              >
                AGPL License text
              </a>
            </div>
          </div>
        </div>
        <div
          className="form-group"
        />
      </form>
    </div>
  </div>
</div>
`;

exports[`components/admin_console/license_settings/LicenseSettings should match snapshot enterprise build with license and upgraded from TE 1`] = `
<div
  className="wrapper--fixed"
>
  <FormattedAdminHeader
    defaultMessage="Edition and License"
    id="admin.license.title"
    values={Object {}}
  />
  <div
    className="admin-console__wrapper"
  >
    <div
      className="admin-console__content"
    >
      <form
        className="form-horizontal"
        role="form"
      >
        <RenewLicenseCard
          isDisabled={false}
          isLicenseExpired={false}
          license={
            Object {
              "Company": "MatterFOSS",
              "ExpiresAt": "1620335443650",
              "IsLicensed": "true",
              "IssuedAt": "1517714643650",
              "Name": "LicenseName",
              "SkuShortName": "SkuName",
              "StartsAt": "1517714643650",
              "Users": "100",
            }
          }
          totalUsers={10}
        />
        <div
          className="form-group"
        >
          <label
            className="control-label col-sm-4"
          >
            <FormattedMessage
              defaultMessage="Edition: "
              id="admin.license.edition"
            />
          </label>
          <div
            className="col-sm-8"
          >
            MatterFOSS - Licensed under the AGPL
          </div>
        </div>
        <div
          className="form-group"
        >
          <label
            className="control-label col-sm-4"
          >
            <FormattedMessage
              defaultMessage="License: "
              id="admin.license.type"
            />
          </label>
          <div
            className="col-sm-8"
          >
            <div>
              <br />
              See also: 
              <a
                href="https://www.gnu.org/licenses/agpl-3.0.en.html"
                rel="noopener noreferrer"
                target="_blank"
              >
                AGPL License text
              </a>
            </div>
          </div>
        </div>
        <div
          className="form-group"
        />
        <div
          className="form-group"
        />
      </form>
    </div>
  </div>
</div>
`;

exports[`components/admin_console/license_settings/LicenseSettings should match snapshot enterprise build with trial license 1`] = `
<div
  className="wrapper--fixed"
>
  <FormattedAdminHeader
    defaultMessage="Edition and License"
    id="admin.license.title"
    values={Object {}}
  />
  <div
    className="admin-console__wrapper"
  >
    <div
      className="admin-console__content"
    >
      <form
        className="form-horizontal"
        role="form"
      >
        <TrialLicenseCard
          license={
            Object {
              "ExpiresAt": "1620335443650",
              "IsLicensed": "true",
              "IssuedAt": "1617714643650",
              "StartsAt": "1617714643650",
            }
          }
        />
        <div
          className="form-group"
        >
          <label
            className="control-label col-sm-4"
          >
            <FormattedMessage
              defaultMessage="Edition: "
              id="admin.license.edition"
            />
          </label>
          <div
            className="col-sm-8"
          >
            MatterFOSS - Licensed under the AGPL
          </div>
        </div>
        <div
          className="form-group"
        >
          <label
            className="control-label col-sm-4"
          >
            <FormattedMessage
              defaultMessage="License: "
              id="admin.license.type"
            />
          </label>
          <div
            className="col-sm-8"
          >
            <div>
              <p>
                This software is offered under the GNU Affero GPL 3.0. You are reminded that under the terms of the AGPL, providing a this web service constitutes redistribution of the software and therefore any changes that you make to the software must be made available to your users in source code form.
              </p>
              <br />
              See also: 
              <a
                href="https://www.gnu.org/licenses/agpl-3.0.en.html"
                rel="noopener noreferrer"
                target="_blank"
              >
                AGPL License text
              </a>
            </div>
          </div>
        </div>
        <div
          className="form-group"
        />
      </form>
    </div>
  </div>
</div>
`;

exports[`components/admin_console/license_settings/LicenseSettings should match snapshot enterprise build without license 1`] = `
<div
  className="wrapper--fixed"
>
  <FormattedAdminHeader
    defaultMessage="Edition and License"
    id="admin.license.title"
    values={Object {}}
  />
  <div
    className="admin-console__wrapper"
  >
    <div
      className="admin-console__content"
    >
      <form
        className="form-horizontal"
        role="form"
      >
        <div
          className="form-group"
        >
          <label
            className="control-label col-sm-4"
          >
            <FormattedMessage
              defaultMessage="Edition: "
              id="admin.license.edition"
            />
          </label>
          <div
            className="col-sm-8"
          >
            <div>
              MatterFOSS.
              <p
                className="trial"
              >
                <button
                  className="btn btn-primary"
                  disabled={false}
                  onClick={[Function]}
                  type="button"
                >
                  <LoadingWrapper
                    loading={false}
                    text="Getting trial"
                  >
                    <FormattedMessage
                      defaultMessage="Start trial"
                      id="admin.license.trial-request.submit"
                    />
                  </LoadingWrapper>
                </button>
              </p>
              <p
                className="trial-legal-terms"
              >
                <injectIntl(FormattedMarkdownMessage)
                  defaultMessage="By clicking **Start trial**, I agree to the [MatterFOSS Software Evaluation Agreement](!https://mattermost.com/software-evaluation-agreement/), [Privacy Policy](!https://mattermost.com/privacy-policy/), and receiving product emails."
                  id="admin.license.trial-request.accept-terms"
                />
              </p>
            </div>
          </div>
        </div>
        <div
          className="form-group"
        >
          <label
            className="control-label col-sm-4"
          >
            <FormattedMessage
              defaultMessage="License: "
              id="admin.license.type"
            />
          </label>
          <div
            className="col-sm-8"
          >
            This software is offered under the GNU Affero GPL 3.0. You are reminded that under the terms of the AGPL, providing a this web service constitutes redistribution of the software and therefore any changes that you make to the software must be made available to your users in source code form.
          </div>
        </div>
        <div
          className="form-group"
        >
          <label
            className="control-label col-sm-4"
          >
            <FormattedMessage
              defaultMessage="License Key: "
              id="admin.license.key"
            />
          </label>
          <div
            className="col-sm-8"
          >
            <div
              className="file__upload"
            >
              <button
                className="btn btn-primary"
                type="button"
              >
                <FormattedMessage
                  defaultMessage="Choose File"
                  id="admin.license.choose"
                />
              </button>
              <input
                accept=".mattermost-license"
                disabled={false}
                onChange={[Function]}
                type="file"
              />
            </div>
            <button
              className="btn"
              disabled={true}
              id="upload-button"
              onClick={[Function]}
            >
              <FormattedMessage
                defaultMessage="Upload"
                id="admin.license.upload"
              />
            </button>
            <div
              className="help-text m-0"
            >
              <FormattedMessage
                defaultMessage="No file uploaded"
                id="admin.license.noFile"
              />
            </div>
            <br />
            <p
              className="help-text m-0"
            >
              <injectIntl(FormattedMarkdownMessage)
                defaultMessage="Upload a license key for MatterFOSS to upgrade this server. [Visit us online](!http://mattermost.com) to learn more about the benefits of Enterprise Edition or to purchase a key."
                id="admin.license.uploadDesc"
              />
            </p>
          </div>
        </div>
      </form>
    </div>
  </div>
</div>
`;

exports[`components/admin_console/license_settings/LicenseSettings should match snapshot enterprise build without license and upgrade from TE 1`] = `
<div
  className="wrapper--fixed"
>
  <FormattedAdminHeader
    defaultMessage="Edition and License"
    id="admin.license.title"
    values={Object {}}
  />
  <div
    className="admin-console__wrapper"
  >
    <div
      className="admin-console__content"
    >
      <form
        className="form-horizontal"
        role="form"
      >
        <div
          className="form-group"
        >
          <label
            className="control-label col-sm-4"
          >
            <FormattedMessage
              defaultMessage="Edition: "
              id="admin.license.edition"
            />
          </label>
          <div
            className="col-sm-8"
          >
            <div>
              MatterFOSS.
              <p
                className="trial"
              >
                <button
                  className="btn btn-primary"
                  disabled={false}
                  onClick={[Function]}
                  type="button"
                >
                  <LoadingWrapper
                    loading={false}
                    text="Getting trial"
                  >
                    <FormattedMessage
                      defaultMessage="Start trial"
                      id="admin.license.trial-request.submit"
                    />
                  </LoadingWrapper>
                </button>
              </p>
              <p
                className="trial-legal-terms"
              >
                <injectIntl(FormattedMarkdownMessage)
                  defaultMessage="By clicking **Start trial**, I agree to the [MatterFOSS Software Evaluation Agreement](!https://mattermost.com/software-evaluation-agreement/), [Privacy Policy](!https://mattermost.com/privacy-policy/), and receiving product emails."
                  id="admin.license.trial-request.accept-terms"
                />
              </p>
            </div>
          </div>
        </div>
        <div
          className="form-group"
        >
          <label
            className="control-label col-sm-4"
          >
            <FormattedMessage
              defaultMessage="License: "
              id="admin.license.type"
            />
          </label>
          <div
            className="col-sm-8"
          >
            <div>
              <p />
              <p>
                See NOTICE.txt for information about open source software used in the system.
              </p>
            </div>
          </div>
        </div>
        <div
          className="form-group"
        >
          <label
            className="control-label col-sm-4"
          >
            <FormattedMessage
              defaultMessage="License Key: "
              id="admin.license.key"
            />
          </label>
          <div
            className="col-sm-8"
          >
            <div
              className="file__upload"
            >
              <button
                className="btn btn-primary"
                type="button"
              >
                <FormattedMessage
                  defaultMessage="Choose File"
                  id="admin.license.choose"
                />
              </button>
              <input
                accept=".mattermost-license"
                disabled={false}
                onChange={[Function]}
                type="file"
              />
            </div>
            <button
              className="btn"
              disabled={true}
              id="upload-button"
              onClick={[Function]}
            >
              <FormattedMessage
                defaultMessage="Upload"
                id="admin.license.upload"
              />
            </button>
            <div
              className="help-text m-0"
            >
              <FormattedMessage
                defaultMessage="No file uploaded"
                id="admin.license.noFile"
              />
            </div>
            <br />
            <p
              className="help-text m-0"
            >
              <injectIntl(FormattedMarkdownMessage)
                defaultMessage="Upload a license key for MatterFOSS to upgrade this server. [Visit us online](!http://mattermost.com) to learn more about the benefits of Enterprise Edition or to purchase a key."
                id="admin.license.uploadDesc"
              />
            </p>
          </div>
        </div>
        <div
          className="form-group"
        />
      </form>
    </div>
  </div>
</div>
`;

exports[`components/admin_console/license_settings/LicenseSettings should match snapshot team edition build with license 1`] = `
<div
  className="wrapper--fixed"
>
  <FormattedAdminHeader
    defaultMessage="Edition and License"
    id="admin.license.title"
    values={Object {}}
  />
  <div
    className="admin-console__wrapper"
  >
    <div
      className="admin-console__content"
    >
      <form
        className="form-horizontal"
        role="form"
      >
        <RenewLicenseCard
          isDisabled={false}
          isLicenseExpired={false}
          license={
            Object {
              "Company": "MatterFOSS",
              "ExpiresAt": "1620335443650",
              "IsLicensed": "true",
              "IssuedAt": "1517714643650",
              "Name": "LicenseName",
              "SkuShortName": "SkuName",
              "StartsAt": "1517714643650",
              "Users": "100",
            }
          }
          totalUsers={10}
        />
        <div
          className="form-group"
        >
          <label
            className="control-label col-sm-4"
          >
            <FormattedMessage
              defaultMessage="Edition: "
              id="admin.license.edition"
            />
          </label>
          <div
            className="col-sm-8"
          >
            <div>
              <p>
                MatterFOSS.
              </p>
            </div>
          </div>
        </div>
        <div
          className="form-group"
        >
          <label
            className="control-label col-sm-4"
          >
            <FormattedMessage
              defaultMessage="License: "
              id="admin.license.type"
            />
          </label>
          <div
            className="col-sm-8"
          >
            <div>
              <p>
                This software is offered under the GNU Affero GPL 3.0. You are reminded that under the terms of the AGPL, providing a this web service constitutes redistribution of the software and therefore any changes that you make to the software must be made available to your users in source code form.
              </p>
              <p />
              <p>
                See NOTICE.txt for information about open source software used in the system.
              </p>
            </div>
          </div>
        </div>
        <div
          className="form-group"
        />
      </form>
    </div>
  </div>
</div>
`;

exports[`components/admin_console/license_settings/LicenseSettings should match snapshot team edition build without license 1`] = `
<div
  className="wrapper--fixed"
>
  <FormattedAdminHeader
    defaultMessage="Edition and License"
    id="admin.license.title"
    values={Object {}}
  />
  <div
    className="admin-console__wrapper"
  >
    <div
      className="admin-console__content"
    >
      <form
        className="form-horizontal"
        role="form"
      >
        <div
          className="form-group"
        >
          <label
            className="control-label col-sm-4"
          >
            <FormattedMessage
              defaultMessage="Edition: "
              id="admin.license.edition"
            />
          </label>
          <div
            className="col-sm-8"
          >
            <div>
              <p>
                MatterFOSS.
              </p>
            </div>
          </div>
        </div>
        <div
          className="form-group"
        >
          <label
            className="control-label col-sm-4"
          >
            <FormattedMessage
              defaultMessage="License: "
              id="admin.license.type"
            />
          </label>
          <div
            className="col-sm-8"
          >
            <div>
              <p>
                This software is offered under the GNU Affero GPL 3.0. You are reminded that under the terms of the AGPL, providing a this web service constitutes redistribution of the software and therefore any changes that you make to the software must be made available to your users in source code form.
              </p>
              <p />
              <p>
                See NOTICE.txt for information about open source software used in the system.
              </p>
            </div>
          </div>
        </div>
        <div
          className="form-group"
        />
      </form>
    </div>
  </div>
</div>
`;
